@@ -18,6 +18,7 @@ protected:
   virtual void UpdateButtons();
   virtual void DoSearch(const CStdString& strSearch, CFileItemList& items);
   virtual void PlayItem(int iItem);
+  virtual void OnWindowLoaded();
   virtual void OnPopupMenu(int iItem);
 
   void SetArtistImage(int iItem);
